...

final class ProductViewController: UIViewController, Storyboarded {
    static var storyboard = AppStoryboard.product
    var viewModel: ProductViewModel?
    private let disposeBag = DisposeBag()
    
    @IBOutlet weak private var btnAddMoney: UIButton!
    @IBOutlet weak private var lblMoneybox: UILabel!
    @IBOutlet weak private var lblPlanValue: UILabel!
    @IBOutlet weak private var lblTitle: UILabel!
    
    override func viewDidLoad() {
        super.viewDidLoad()
...
