...
    static var storyboard = AppStoryboard.login
    var viewModel: LoginViewModel?
    private let disposeBag = DisposeBag()
    
    @IBOutlet weak private var tfPassword: UITextField!
    @IBOutlet weak private var tfMail: UITextField!
    @IBOutlet weak private var btnLogin: UIButton!
    @IBOutlet weak private var svLogin: UIStackView!
    @IBOutlet weak private var ivLogo: UIImageView!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
...
